syntax = "proto3";
package saonetwork.sao.did;

option go_package = "github.com/SaoNetwork/sao/x/did/types";

message SidDocument {
  string versionId = 1; 
  string signing = 2; 
  string encryption = 3; 
  
}

